[gd_scene load_steps=3 format=3 uid="uid://bmftyc5y0aned"]

[ext_resource type="Script" path="res://addons/SEAL/visualizers/SettingsPanel.gd" id="1_4t6q3"]
[ext_resource type="Texture2D" uid="uid://c7yc3b3whn0ao" path="res://addons/SEAL/visualizers/SearchIcon.png" id="2_fi3us"]

[node name="SettingsPanel" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
script = ExtResource("1_4t6q3")

[node name="titleBar" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="TextureRect" type="TextureRect" parent="titleBar"]
layout_mode = 2
texture = ExtResource("2_fi3us")
expand_mode = 3

[node name="SearchBox" type="LineEdit" parent="titleBar"]
layout_mode = 2
placeholder_text = "search"

[node name="SettingsPane" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPane"]
show_behind_parent = true
layout_mode = 2
size_flags_horizontal = 3

[connection signal="visibility_changed" from="." to="." method="_on_panel_visibility_changed"]
[connection signal="text_changed" from="titleBar/SearchBox" to="." method="_on_search_changed"]
